--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,40 @@
     transform: rotate(360deg);
   }
 }
+
+.page-title {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  min-height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding-left: 3rem;
+}
+.page-title.plumbing {
+  background-image: url('../public/images/services-plumbing.jpg');
+}
+
+.page-title::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(220, 53, 69, 0.6);
+  z-index: 1;
+}
+
+.page-title h1 {
+  position: relative;
+  z-index: 2;
+  color: white;
+  font-size: 3rem;
+  font-weight: bold;
+  text-transform: capitalize;
+  margin: 0;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
